attempt yaml fix

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: rouge
 #
 title : Harrison Gill - International Educator
 author : Harrison Gill
-  name : Harrison Gill
+  name :
   email : 
   github : 
   twitter : 
