--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ highlighter: rouge
 # so be sure to set them if your theme uses them.
 #
 title : Harrison Gill - International Educator
-author : Harrison Gill
-  name :
+author :
+  name : Harrison Gill
   email : 
   github : 
   twitter : 
